# speech-mcp

./: .goosehints  CHANGES.md  LICENSE  LOCAL_INSTALLATION.md  README.md  generate_deeplink.sh  install_local.sh  main.py  pyproject.toml
docs/: CHANGELOG.md  logging.md
scripts/: preinstall.py  test_tts_adapters.py
src/speech_mcp/: __init__.py  audio_processor.py  constants.py  server.py  speech_recognition.py  streaming_transcriber.py  ui_command.txt
src/speech_mcp/config/: __init__.py
src/speech_mcp/tts_adapters/: kokoro_adapter.py
src/speech_mcp/ui/: __init__.py  speech_ui.py
src/speech_mcp/ui/components/: audio_processor_ui.py  audio_visualizer.py  tts_adapter.py
src/speech_mcp/ui/pyqt/: __init__.py  __main__.py  pyqt_ui.py
tests/: test_audio_processor.py  test_speech_recognition.py
