[project]
name = "speech-mcp"
version = "0.1.0"
description = "Speech MCP Server with audio visualization UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "openai-whisper>=20231117",
    "numpy>=1.24.0",
    "pyaudio>=0.2.13",
    "pydub>=0.25.1",
    "matplotlib>=3.7.0"
]

[project.scripts]
speech-mcp = "speech_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"